small spacing issues

--- a/app/assets/sass/core/base/_variables.scss
+++ b/app/assets/sass/core/base/_variables.scss
@@ -133,4 +133,4 @@ $logo-height: 40px;
 $logo-height: 1.602em;
 
 // header dimensions, based on logo
-$nav-height: $logo-height*3;
+$nav-height: $logo-height*2.5;
